Opened 13 years ago

Closed 13 years ago

#2335 closed defect (fixed)

AAC decoding regression: Decoding fails from a specific position on

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: aac regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Continuing ticket #1694:
The following command line produces a file that is silent after ten seconds for the sample in http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket1694/ but with ffplay seeking over the bad position allows to continue decoding (it even works sometimes with ffplay without seeking which is why I originally did not report this as a separate ticket).
This is a regression since a78f6b8

$ ffmpeg -ss 630 -i a.aac -t 30 out.wav
ffmpeg version N-50556-g60dbf2e Copyright (c) 2000-2013 the FFmpeg developers
  built on Mar  7 2013 21:03:52 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 18.100 / 52. 18.100
  libavcodec     54. 92.100 / 54. 92.100
  libavformat    54. 63.104 / 54. 63.104
  libavdevice    54.  3.103 / 54.  3.103
  libavfilter     3. 42.103 /  3. 42.103
  libswscale      2.  2.100 /  2.  2.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
[aac @ 0x2a03f40] max_analyze_duration 5000000 reached at 5015510 microseconds
[aac @ 0x2a03f40] Estimating duration from bitrate, this may be inaccurate
Input #0, aac, from 'a.aac':
  Duration: 00:11:39.45, bitrate: 32 kb/s
    Stream #0:0: Audio: aac, 44100 Hz, stereo, fltp, 33 kb/s
Output #0, wav, to 'out.wav':
  Metadata:
    ISFT            : Lavf54.63.104
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, stereo, s16, 1411 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (aac -> pcm_s16le)
Press [q] to stop, [?] for help
[aac @ 0x2a04860] Reserved SBR extensions is not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x2a04860] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
[aac @ 0x2a04860] Reserved SBR extensions is not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x2a04860] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
[aac @ 0x2a04860] Reserved SBR extensions is not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x2a04860] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
[aac @ 0x2a04860] Expected to read 72 PS bits actually read 76.
[aac @ 0x2a04860] Expected to read 78 PS bits actually read 103.
[aac @ 0x2a04860] Expected to read 94 PS bits actually read 111.
[aac @ 0x2a04860] Expected to read 78 PS bits actually read 101.
[aac @ 0x2a04860] ps extension overflow -4
[aac @ 0x2a04860] channel element 2.6 is not allocated
Error while decoding stream #0:0: Operation not permitted
Multiple frames in a packet from stream 0
[aac @ 0x2a04860] Number of bands (35) exceeds limit (18).
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] channel element 2.7 is not allocated
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] Reserved bit set.
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 0x2a04860] Reserved bit set.
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 0x2a04860] Sample rate index in program config element does not match the sample rate index configured by the container.
[aac @ 0x2a04860] Too many channels
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 0x2a04860] Reserved bit set.
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 0x2a04860] Prediction is not allowed in AAC-LC.
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 0x2a04860] Reserved bit set.
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 0x2a04860] channel element 2.5 is not allocated
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] channel element 3.15 is not allocated
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] Number of scalefactor bands in group (62) exceeds limit (47).
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 0x2a04860] Sample rate index in program config element does not match the sample rate index configured by the container.
[aac @ 0x2a04860] channel element 1.8 is not allocated
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] skip_data_stream_element: Input buffer exhausted before END element found
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] channel element 2.2 is not allocated
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] Reserved bit set.
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 0x2a04860] Number of bands (50) exceeds limit (39).
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] channel element 2.6 is not allocated
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] Sample rate index in program config element does not match the sample rate index configured by the container.
[aac @ 0x2a04860] channel element 2.1 is not allocated
Error while decoding stream #0:0: Operation not permitted
[aac @ 0x2a04860] Number of scalefactor bands in group (60) exceeds limit (47).
Error while decoding stream #0:0: Invalid data found when processing input
size=    5016kB time=00:00:30.00 bitrate=1369.5kbits/s
video:0kB audio:5016kB subtitle:0 global headers:0kB muxing overhead 0.001558%

The following produces a file that plays for 30 seconds:
ffmpeg -ss 650 -i a.aac -t 30 out.wav

Change History (1)

comment:1 by Carl Eugen Hoyos, 13 years ago

Resolution: fixed
Status: newclosed

Fixed by Michael.

Note: See TracTickets for help on using tickets.